--- a/src/index.css
+++ b/src/index.css
@@ -527,9 +527,12 @@ footer a:hover {
   font-size: 42px;
   font-weight: 700;
 }
-
+.img-width {width: 60px;
+  position: absolute;
+  left: 30px;
+  top: 30px;}
 .cm_counts {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   background: #ff7129;
   border-radius: 12px !important;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15) !important;
